--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
     "domain": "{exdata}",
     "port": 80,
-    "token": "{KCMz4GmLLe49aTvOHPpWGN0v}"
+    "token": "{KCMz4GmLLe49aTvOHPpWGN0v}",
+    "source": "https://gist.githubusercontent.com/ssk2/9b3ed2af22310d927cb4/raw/"
 }
