Updated config to include Ken

--- a/config/config.json
+++ b/config/config.json
@@ -10,6 +10,11 @@
     	{
     		"name" : "sunil",
     		"url" :  "https://gist.githubusercontent.com/ssk2/5ead926c756568ef3f22/raw/"
-    	}
+    	},
+        {
+            "name" : "ken",
+            "url" :  "https://gist.githubusercontent.com/kensipe/d84f1468de11dde701bd/raw/"
+        }
+
     ]
 }
