--- a/config/config.json
+++ b/config/config.json
@@ -14,6 +14,10 @@
         {
             "name" : "ken",
             "url" :  "https://gist.githubusercontent.com/kensipe/d84f1468de11dde701bd/raw/"
+        },
+        {
+            "name" : "anastasia",
+            "url" : "https://gist.githubusercontent.com/aatumanova/48e5e28ad71b2b53170e/raw/"
         }
 
     ]
